# openfhe-crash-course

./: CMakeLists.txt  Dockerfile  README.md
example/: my-example.cpp  time-bootstrapping.cpp
src/: main.cpp
src/include/: test.hpp
src/lib/: test.cpp
